Alterando o paradigma para OO Cricacao das classes, metodos e atributos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="app">
         <input type="text" name="user" placeholder="Digite um usuário do GitHub" />
-        <button onclick="">Buscar</button>
+        <button>Buscar</button>
         <h4>Repositórios:</h4>
         <br>
         <ul></ul>
